--- a/ShopDienTu.BackendApi/Properties/launchSettings.json
+++ b/ShopDienTu.BackendApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "ShopDienTu.BackendApi": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
